Add animation to heart

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,5 +9,20 @@ body {
 }
 
 .likes [type="checkbox"]:checked ~ .heart {
-  color: red;
+  animation-name: heart;
+  animation-duration: 0.6s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes heart {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+    color: red;
+  }
 }
