Add ripple to heart

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,18 @@ body {
   padding: 40px;
 }
 
+.likes {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: pink;
+}
+
+.likes [type="checkbox"] {
+  display: none;
+}
+
 .heart {
   font-size: 40px;
   color: #e4e4e4;
@@ -24,5 +36,34 @@ body {
   100% {
     transform: scale(1);
     color: red;
+  }
+}
+
+.ripple {
+  position: absolute;
+  width: 85px;
+  height: 85px;
+  background-color: red;
+  border-radius: 50%;
+  transform: scale(0);
+  
+}
+
+.likes [type="checkbox"]:checked ~ .ripple {
+  animation-name: ripple;
+  animation-duration: 0.6s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
   }
 }
