--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,17 @@ body {
 
 .likes {
   cursor: pointer;
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
-  background: pink;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  transition: background .3s;
+}
+
+.likes:hover {
+  background: #f5f5f5;
 }
 
 .likes [type="checkbox"] {
@@ -18,6 +25,8 @@ body {
   font-size: 40px;
   color: #e4e4e4;
   user-select: none;
+  position: relative;
+  top: 1px;
 }
 
 .likes [type="checkbox"]:checked ~ .heart {
